ftkiconsdir=$(datadir)/ftk/icons
ftkicons_DATA=\
	btn_check_off_disable_focused.png       btn_radio_off_pressed.png\
	btn_check_off_disable.png               btn_radio_off_selected.png\
	btn_check_off.png                       btn_radio_on.png\
	btn_check_off_pressed.png               btn_radio_on_pressed.png\
	btn_check_off_selected.png              btn_radio_on_selected.png\
	btn_check_on_disable_focused.png        close-32.png\
	btn_check_on_disable.png                flag-32.png\
	btn_check_on.png                        highlight_disabled.png\
	btn_check_on_pressed.png                highlight_pressed.png\
	btn_check_on_selected.png               highlight_selected.png\
	btn_default_normal_disable_focused.png  list_selector_background_disabled.png\
	btn_default_normal_disable.png          list_selector_background_focus.png\
	btn_default_normal.png                  list_selector_background_longpress.png\
	btn_default_pressed.png                 list_selector_background_pressed.png\
	btn_default_selected.png                menuitem_background_focus.png\
	btn_radio_label_background.png          menuitem_background_pressed.png\
	btn_radio_off.png                       status-bg.png
