EXTRA_DIST=\
	Acrobat.png     Facebook.png  Linkedin.png  Settings.png\
	AIM.png         Flickr.png    Mail.png      Skype.png\
	Games.png     Maps.png      Sms.png\
	Calculator.png  Google.png    Memory.png    Stock.png\
	Calender.png    Install.png   Notes.png     Twitter.png\
	Call.png        iPod.png      Photos.png    VLC.png\
	Camera.png      IP.png        png1.png      Weather.png\
	Chat.png        iradio.png    png2.png      WLM.png\
	Clock.png       iTunes.png    png3.png      Wordpress.png\
	Customize.png   jpeg1.jpg     RSS.png       Yahoo.png\
	Delicious.png   LastFm.png    Safari.png    Youtube.png
