themedir=$(datadir)/ftk/base/theme/default
theme_DATA=\
	$(srcdir)/btn_check_off_disable_focused.png\
	$(srcdir)/btn_check_off_disable.png\
	$(srcdir)/btn_check_off.png\
	$(srcdir)/btn_check_off_pressed.png\
	$(srcdir)/btn_check_off_selected.png\
	$(srcdir)/btn_check_on_disable_focused.png\
	$(srcdir)/btn_check_on_disable.png\
	$(srcdir)/btn_check_on.png\
	$(srcdir)/btn_check_on_pressed.png\
	$(srcdir)/btn_check_on_selected.png\
	$(srcdir)/btn_default_normal_disable_focused.png\
	$(srcdir)/btn_default_normal_disable.png\
	$(srcdir)/btn_default_normal.png\
	$(srcdir)/btn_default_pressed.png\
	$(srcdir)/btn_default_selected.png\
	$(srcdir)/btn_radio_label_background.png\
	$(srcdir)/btn_radio_off.png\
	$(srcdir)/btn_radio_off_pressed.png\
	$(srcdir)/btn_radio_off_selected.png\
	$(srcdir)/btn_radio_on.png\
	$(srcdir)/btn_radio_on_pressed.png\
	$(srcdir)/btn_radio_on_selected.png\
	$(srcdir)/close-32.png\
	$(srcdir)/close-pressed-32.png\
	$(srcdir)/cursor.png\
	$(srcdir)/flag-32.png\
	$(srcdir)/highlight_disabled.png\
	$(srcdir)/highlight_pressed.png\
	$(srcdir)/highlight_selected.png\
	$(srcdir)/list_selector_background_disabled.png\
	$(srcdir)/list_selector_background_focus.png\
	$(srcdir)/list_selector_background_longpress.png\
	$(srcdir)/list_selector_background_pressed.png\
	$(srcdir)/menuitem_background_focus.png\
	$(srcdir)/menuitem_background_pressed.png\
	$(srcdir)/scrollbar_handle_accelerated_anim.png\
	$(srcdir)/scrollbar_handle_horizontal.png\
	$(srcdir)/scrollbar_handle_vertical.png\
	$(srcdir)/status-bg.png\
	$(srcdir)/wait_box.png \
	theme.xml

EXTRA_DIST=$(theme_DATA)
