themedir=$(datadir)/ftk/base/theme/default
theme_DATA=\
	btn_check_off_disable_focused.png \
	btn_check_off_disable.png \
	btn_check_off.png \
	btn_check_off_pressed.png \
	btn_check_off_selected.png \
	btn_check_on_disable_focused.png \
	btn_check_on_disable.png \
	btn_check_on.png \
	btn_check_on_pressed.png \
	btn_check_on_selected.png \
	btn_default_normal_disable_focused.png \
	btn_default_normal_disable.png \
	btn_default_normal.png \
	btn_default_pressed.png \
	btn_default_selected.png \
	btn_radio_label_background.png \
	btn_radio_off.png \
	btn_radio_off_pressed.png \
	btn_radio_off_selected.png \
	btn_radio_on.png \
	btn_radio_on_pressed.png \
	btn_radio_on_selected.png \
	close-32.png \
	close-pressed-32.png \
	cursor.png \
	drop_down_normal.png \
	drop_down_pressed.png \
	drop_down_selected.png \
	flag-32.png \
	highlight_disabled.png \
	highlight_pressed.png \
	highlight_selected.png \
	icon_view_bg.png \
	info.png \
	list_selector_background_disabled.png \
	list_selector_background_focus.png \
	list_selector_background_longpress.png \
	list_selector_background_normal.png \
	list_selector_background_pressed.png \
	list_view_bg.png \
	menuitem_background_focus.png \
	menuitem_background_pressed.png \
	question.png \
	scrollbar_handle_accelerated_anim.png \
	scrollbar_handle_horizontal.png \
	scrollbar_handle_vertical.png \
	status-bg.png \
	wait_box.png \
	warning.png theme.xml \
	folder.png  mime_image.png  mime_text.png \
	mime_unknown.png mime_audio.png up.png \
	progressbar_i_bg.png progressbar_i_cursor.png \
	more.png

EXTRA_DIST=$(theme_DATA)
