EXTRA_DIST=ftk.sln  ftk.suo  ftk.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h

SUBDIRS=demo_alpha   demo_combobox  demo_icon_view  demo_list_view  demo_popup     demo_textview \
	demo_button  demo_entry     demo_images     demo_menu       demo_progress  demo_transparent  \
	demo_check   demo_expand    demo_ime        demo_msgbox     demo_sprite    demo_xul    

