EXTRA_DIST=ftk.sln  ftk.suo  ftk.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h

SUBDIRS=demo_alpha   demo_check  demo_expand     demo_images     demo_menu    demo_popup     demo_sprite    demo_transparent \
	demo_button  demo_entry  demo_icon_view  demo_list_view  demo_msgbox  demo_progress  demo_textview
