EXTRA_DIST=\
	ftk_bitmap_factory.idl  ftk_check_button.idl  ftk_display.idl  ftk_globals.idl     ftk_widget.idl\
	ftk_bitmap.idl          ftk_clipboard.idl     ftk_entry.idl    ftk_icon_cache.idl  ftk_xul.idl\
	ftk_button.idl          ftk_combo_box.idl     ftk_font.idl     ftk_icon_view.idl   replace.vim\
	ftk_canvas.idl          ftk_dialog.idl        ftk_gc.idl       ftk_typedef.idl
